--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - db
     environment:
-      - DB_DSN="postgresql://postgres:postgres@db:5432/postgres"
+      - POSTGRES_DSN=postgresql://postgres:postgres@db:5432/postgres?sslmode=disable
     volumes:
       - ./server:/go/src/service
     ports:
