add db interaction

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,9 @@
 					"go.goroot": "/usr/local/go"
 			},
 			"extensions": [
-					"golang.Go"
+					"golang.Go",
+					"mtxr.sqltools",
+					"mtxr.sqltools-driver-pg"
 			]
 		}
 	 }
