--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	// The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
 	"dockerComposeFile": [
 		"../docker-compose.yaml"
-	//"docker-compose.yml"
+		//"docker-compose.yml"
 	],
 
 	// The 'service' property is the name of the service for the container that VS Code should
@@ -45,7 +45,8 @@
 			"extensions": [
 					"golang.Go",
 					"mtxr.sqltools",
-					"mtxr.sqltools-driver-pg"
+					"mtxr.sqltools-driver-pg",
+					"ms-vscode.makefile-tools"
 			]
 		}
 	 }
